# QuranKarim

./: CMakeLists.txt  QuranKarim.qmlproject  QuranKarim.qmlproject.qtds  qmlmodules  qtquickcontrols2.conf
b/: CMakeCache.txt
content/: App.qml  CMakeLists.txt  MainPage.qml  QuranToolBar.qml  ReaderPage.qml  SettingsPage.qml
imports/: CMakeLists.txt
imports/QuranKarim/: CMakeLists.txt  qmldir
imports/QuranKarim/designer/: plugin.metainfo
src/: Qt_middleware.cpp  import_qml_plugins.h  main.cpp  qt_middleware.hpp
